syntax = "proto3";

option go_package="/example";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a hello greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends a bye greeting
  rpc SayBye (ByeRequest) returns (ByeReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message ByeRequest {
  string name = 1;
}

// The response message containing the greetings
message ByeReply {
  string message = 1;
}
